# free-bench

./: README.md  free-bench.cabal  stack.yaml
src-bench/Bench/: Freer.hs  Haxl.hs
src-bench/Bench/Free/: Church.hs  DataSource.hs
src-bench/Bench/Free/Church/: Ap.hs
src-bench/Bench/Free/GADT/: DataSource.hs
src-bench/Bench/FreeT/: Church.hs
src-bench/Bench/FreeT/Church/: Ap.hs
src-bench/Bench/Haxl/: DataSource.hs
src-criterion/: Main.hs
src-weigh/: Main.hs
src/Control/Applicative/Free/: Church.hs  Dave.hs
src/Control/Monad/Free/: Ap.hs
src/Control/Monad/Trans/: Fraxl.hs
src/Control/Monad/Trans/Free/: Ap.hs
